--- a/photo.html
+++ b/photo.html
@@ -12,8 +12,10 @@
     <h1>Welcome to "Croissant"!</h1>
 
     <div class="image-container">
-      <img src="photo1.jpg"  alt="croissant-img" width="200" height="200">
-      <img src="my-site/images/photo2.jpg"  alt="croissant-img" width="200" height="200">
+      <div class="row">
+      <img src="/images/photo1.jpg"  alt="croissant-img" width="200" height="200">
+      <img src="/images/photo2.jpg"  alt="croissant-img" width="200" height="200">
+    </div>
     </div>
 
     <div class="navigation">
