--- a/photo.html
+++ b/photo.html
@@ -13,8 +13,8 @@
 
     <div class="image-container">
       <div class="row">
-      <img src="/images/photo1.jpg"  alt="croissant-img" width="200" height="200">
-      <img src="/images/photo2.jpg"  alt="croissant-img" width="200" height="200">
+      <img src="images/photo1.jpg"  alt="croissant-img" class="img-fluid" width="200" height="200">
+      <img src="images/photo2.jpg"  alt="croissant-img" class="img-fluid" width="200" height="200">
     </div>
     </div>
 
