--- a/photo.html
+++ b/photo.html
@@ -13,8 +13,12 @@
 
     <div class="image-container">
       <div class="row">
-      <img src="images/photo1.jpg"  alt="croissant-img" class="img-fluid" width="200" height="200">
-      <img src="images/photo2.jpg"  alt="croissant-img" class="img-fluid" width="200" height="200">
+        <div class="col-6">
+      <img src="images/photo1.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2">
+        </div>
+        <div class="col-6">
+      <img src="images/photo2.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2">
+        </div> 
     </div>
     </div>
 
