--- a/photo.html
+++ b/photo.html
@@ -12,12 +12,12 @@
     <h1>Welcome to "Croissant"!</h1>
 
     <div class="image-container">
-      <div class="row">
+      <div class="row class="d-flex">
         <div class="col-6">
-      <img src="images/photo1.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2">
+      <img src="images/photo1.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2 m-2">
         </div>
         <div class="col-6">
-      <img src="images/photo2.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2">
+      <img src="images/photo2.jpg"  alt="croissant-img" class="img-fluid rounded shadow-sm p-2 m-2">
         </div> 
     </div>
     </div>
