--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"  content="restaurant for the whole family croissant main page" />
   <title>croissant</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
@@ -12,12 +13,12 @@
     <h1>Welcome to "Croissant"!</h1>
 
     <div class="image-container">
-      <img src="images/croissant.jpg" alt="croissant-img">
+      <img src="https://images.app.goo.gl/sEtkgiPmM2E5BFfT8" alt="Image description" width="400"/>
     </div>
 
     <div class="navigation">
-      <a href="contact.html">Contact</a>
-      <a href="photo.html">Photo</a>
+      <a href="contact.html" target="_blank" title="Contact page">Contact</a>
+      <a href="photo.html" target="_blank" title="Photo page">Photo</a>
     </div>
   </div>
 </body>
