--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"  content="restaurant for the whole family croissant contact page" />
   <title>contact page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
@@ -16,8 +17,8 @@
     </div>
 
     <div class="navigation">
-      <a href="index.html">Back</a>
-      <a href="photo.html">Photo</a>
+      <a href="index.html" target="_blank" title="Homepage">Back</a>
+      <a href="photo.html" target="_blank" title="Photo page>Photo</a>
     </div>
   </div>
 </body>
