--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"  content="restaurant for the whole family croissant photo page" />
   <title>croissant</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
@@ -23,8 +24,8 @@
     </div>
 
     <div class="navigation">
-      <a href="contact.html">Contact</a>
-      <a href="index.html">Back</a>
+      <a href="contact.html" target="_blank" title="Contact page">Contact</a>
+      <a href="index.html" target="_blank" title="Homepage">Back</a>
     </div>
   </div>
 </body>
