--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"  content="restaurant for the whole family croissant main page" />
-  <title>croissant</title>
+  <meta name="description"  content="Restaurant for the whole family in the center of Kyiv "Croissant", children's menu, adult menu, drinks, inexpensive" />
+  <title>Restaurant for the whole family in the center of Kyiv "Croissant"</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
 </head>
