--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Welcome to "Croissant"!</h1>
 
     <div class="image-container">
-      <img src="images/croissant.jpg" alt="Image description" width="400"/>
+      <img src="/images/croissant.jpg" alt="Image description" width="400"/>
     </div>
 
     <div class="navigation">
