--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <h1>Our contact</h1>
 
     <div class="image-container">
-      <img src="images/croissant.jpg" alt="croissant-img">
+      <img src="/images/croissant.jpg" alt="croissant-img">
     </div>
 
     <div class="navigation">
