--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"  content="Restaurant for the whole family in the center of Kyiv 'Croissant', children's menu, adult menu, drinks, inexpensive" />
-  <title>Restaurant for the whole family<title>
+  <title>Restaurant for the whole family"</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
   <div class="container">
-    <h1>Our contact</h1>
+    <h1>Welcome to "Croissant"!</h1>
 
     <div class="image-container">
-      <img src="/images/croissant.jpg" alt="croissant-img">
+      <img src="/images/croissant.jpg" alt="Image description" width="400"/>
     </div>
 
     <div class="navigation">
-      <a href="index.html" target="_blank" title="Homepage">Back</a>
-      <a href="photo.html" target="_blank" title="Photo page>Photo</a>
+      <a href="index.html" target="_blank" title="Home page">Contact</a>
+      <a href="photo.html" target="_blank" title="Photo page">Photo</a>
     </div>
   </div>
 </body>
