--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,6 @@
       <a href="photo.html" target="_blank" title="Photo page">Photo</a>
     </div>
   </div>
+  <p>Open-cource code built by Daria Biesieda</p>
 </body>
 </html>
