--- a/photo.html
+++ b/photo.html
@@ -28,5 +28,6 @@
       <a href="index.html" target="_blank" title="Homepage">Back</a>
     </div>
   </div>
+  <p>Open-cource code built by Daria Biesieda</p>
 </body>
 </html>
